--- a/tasks/Gnome/main.yml
+++ b/tasks/Gnome/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Gsettings
-  include_tasks: "{{ item }}.yml"
+  include_tasks: "{{ t }}.yml"
   loop:
   - ergonomic
   - power
+  loop_control:
+    loop_var: t
